[tool.poetry]
name = "gs-reminder"
version = "0.5.0"
description = "Notify Slack of a review of Pull Requests in the GitHub repository."
authors = ["Yuya Oka <nnsnodnb@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nnsnodnb/gs-reminder"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "gs_reminder" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
isort = "^5.11.4"
flake8 = "^5.0.4"
mypy = ">=0.991,<1.9"
types-requests = "^2.28.11"

[tool.poetry.scripts]
gs-reminder = "gs_reminder.notifier:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
    )/
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5
