[project]
name = "gs-reminder"
description = "Notify Slack of a review of Pull Requests in the GitHub repository."
authors = [
    { name = "nnsnodnb", email = "nnsnodnb@gmail.com" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nnsnodnb/gs-reminder"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.poetry]
packages = [
    { include = "gs_reminder" }
]
version = "0.0.0" # replacing poetry-dynamic-versioning

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.32.5"
click = "^8.1.3"
pydantic = ">=2.9.2"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<26.0"
isort = "^6.1.0"
flake8 = ">=5.0.4,<8.0.0"
mypy = ">=0.991,<1.19"
types-requests = "^2.32.4"
requests-mock = "^1.1.0"
pytest = ">=7.0.0,<8.5.0"

[tool.poetry.scripts]
gs-reminder = "gs_reminder.notifier:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.4.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
    )/
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5
